<resources>
    <string name="app_name">Foodpenguin</string>
    <string name="logo_food_text">FOOD</string>
    <string name="logo_penguin_text">PENGUIN</string>
    <string name="promotionAdapter">Promotion</string>
    <string name="cart">Cart</string>
    <string name="main">Main</string>
    <string name="wallet">Wallet</string>
    <string name="account">Account</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forget_password_text">Forget Password?</string>
    <string name="login_text">LOGIN</string>
    <string name="signUp_ques_text">Don\'t have an account?</string>
    <string name="signUp_text">Sign Up</string>
    <string name="select_a_payment_method">Select a payment method</string>
    <string name="confirm">Confirm</string>
    <string name="send_text">SEND</string>
    <string name="forget_pass_1">Please enter your E-mail</string>
    <string name="forget_pass_2">We will send a verification code to your email</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="verification_hint">Verification</string>
    <string name="retype_password_hint">Retype Password</string>
    <string name="create_account_text">CREATE ACCOUNT</string>
    <string name="sign_in_ques_text">Already have an account?</string>
    <string name="sign_in_text">Sign In</string>
    <string name="username">UserName</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">E-mail</string>
    <string name="address">Address</string>
    <string name="my_order">My Orders</string>
    <string name="log_out">Log Out</string>
    <string name="food_screen_menu">Food Screen Menu</string>
    <string name="search">Search</string>
    <string name="penguin_wallet">Penguin Wallet</string>
    <string name="topup_hint">Enter Your Top Up Value</string>
    <string name="top_up_button">Top Up</string>
    <string name="wallet_discount_msg">Enjoy additional discount using Penguin Wallet !</string>
    <string name="top_up_method">Top Up Method</string>
    <string name="cards">Cards</string>
    <string name="online_banking">Online Banking</string>
    <string name="orders">Orders</string>
    <string name="current_order">Current Order</string>
    <string name="recent_orders">Recent Orders</string>
    <string name="order_thanks">Thank you for your order !</string>
    <string name="checkout_card"><![CDATA[Cards\nVisa & Mastercard]]></string>
    <string name="checkout">checkout</string>
    <string-array name="ifNotAvailable_array">
        <item>Cancel this product</item>
        <item>Change product by call</item>
    </string-array>
    <string name="arriving">Arriving</string>
    <string name="picking_up">Picking-up</string>
    <string name="preparing">Preparing</string>
    <string name="receiving">Receiving</string>
</resources>
