<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/promotionAdapter">

    <fragment
        android:id="@+id/promotionAdapter"
        android:name="com.xhpp.foodpenguin.ui.promotionAdapter.PromotionFragment"
        android:label="@string/promotionAdapter"
        tools:layout="@layout/fragment_promotion" />

    <fragment
        android:id="@+id/cart"
        android:name="com.xhpp.foodpenguin.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/main"
        android:name="com.xhpp.foodpenguin.ui.main.MainFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_main"/>

    <fragment
        android:id="@+id/wallet"
        android:name="com.xhpp.foodpenguin.ui.wallet.WalletFragment"
        android:label="@string/wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/account"
        android:name="com.xhpp.foodpenguin.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>