<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    app:layout_constraintCircleRadius="25dp"
    tools:context="com.xhpp.foodpenguin.ui.login.LoginActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/emailInput"
        android:layout_width="250dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <LinearLayout
            android:id="@+id/emailGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/emailLogo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="0.1"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_email"
                tools:ignore="VectorDrawableCompat" />

            <View
                android:id="@+id/emailLine"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="#000000"
                android:gravity="center" />

            <EditText
                android:id="@+id/emailTextInputLo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@null"
                android:ems="10"
                android:gravity="center|start"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textColorHint="#858181"
                android:textSize="15sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/foodpenguin_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:gravity="end"
        android:text="@string/logo_food_text"
        android:textColor="@color/colorFoodText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="150dp"
        android:text="@string/logo_penguin_text"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/passwordInput"
        android:layout_width="250dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput">

        <LinearLayout
            android:id="@+id/passwordGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/passwordLogo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="0.1"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_password"
                tools:ignore="VectorDrawableCompat" />

            <View
                android:id="@+id/passwordLine"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="#000000"
                android:gravity="center" />

            <EditText
                android:id="@+id/passTextInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@null"
                android:ems="10"
                android:gravity="center|start"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#858181"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="forgetPassword"
        android:text="@string/forget_password_text"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:layout_marginTop="56dp"
        android:clickable="true"
        android:onClick="login"
        android:background="@drawable/login_register_button"
        android:text="@string/login_text"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <LinearLayout
        android:id="@+id/signUpGroup"
        android:layout_width="180sp"
        android:layout_height="20dp"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/signUpQues"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/signUp_ques_text"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:text="@string/signUp_text"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"
            android:onClick="signUp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>